--- a/slitaz/index.ru.html
+++ b/slitaz/index.ru.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="ru">
+<html lang="ru">
 <head>
-	<meta charset="utf-8" />
-	<title>SliTaz — Системная документация (ru)</title>
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="../slitaz-doc.css" />
+	<meta charset="UTF-8">
+	<title>SliTaz — Системная документация</title>
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" href="../slitaz-doc.css">
 </head>
 <body>
 
@@ -28,84 +28,217 @@
 <!-- Content. -->
 <div id="content">
 
-<h2>Документация (ru)</h2>
+<h2>Документация</h2>
 
-<p>Версия Cooking не содержит никакой информации о релизе, основные изменения объявляются на сайте и в <a href="http://scn.slitaz.org/">блоге</a>, которые предоставляют свежие новости о деятельности проекта. Как и для стабильной версии, вы найдете <a href="http://doc.slitaz.org/">документацию</a> на сайте вики и поддержку на <a href="http://forum.slitaz.org/">форуме</a> сообщества.</p>
+<!--
+<p>Версия Cooking не содержит никакой информации о релизе, основные изменения объявляются на сайте
+и в <a href="http://scn.slitaz.org/">блоге</a>, которые предоставляют свежие новости о деятельности
+проекта. Как и для стабильной версии, вы найдете <a href="http://doc.slitaz.org/">документацию</a>
+на сайте вики и поддержку на <a href="http://forum.slitaz.org/">форуме</a> сообщества.</p>
+-->
 
-<!--<p>
-The SliTaz GNU/Linux stable release is published with the project tools,
-manuals and <a href="relnotes.en.html">Release Notes</a> installed on
-the system. Manuals and this page are accessible through the standard menu.
-Please check the <a href="http://www.slitaz.org/en/">project page</a> for
-general information about SliTaz. To start to use and configure the system, 
-you can read the <a href="http://doc.slitaz.org/en:handbook:start">Handbook</a>.
-Support can be found on the SliTaz mailing list or the community 
-<a href="http://forum.slitaz.org/">Forum</a>. 
-</p>-->
+<p>
+Стабильный релиз SliTaz GNU/Linux содержит инструменты, разрабатываемые специально для SliTaz,
+руководства и <a href="relnotes.ru.html">информацию о выпуске</a>.
+Руководства доступны в меню приложений, доступное на панели.
+Чтобы получить общую информацию о SliTaz, посетите <a href="http://www.slitaz.org/ru/">сайт
+проекта</a>.
+Помощь можно получить в списке рассылки SliTaz и на <a href="http://forum.slitaz.org/">форуме</a>
+сообщества.
+</p>
 
 <ul>
-	<li><a href="#start">Руководство «Как начать»</a></li>
-	<!--<li><a href="relnotes.en.html">Release Notes for 5.0</a> -
-	<a href="relnotes.cn.html">cn</a> |
-	<a href="relnotes.en.html">en</a> |
-	<a href="relnotes.es.html">es</a> |
-	<a href="relnotes.fr.html">fr</a> |
-	<a href="relnotes.pt.html">pt</a></li>-->
+	<li><a href="#start">Приступая к работе</a></li>
+	<li><a href="relnotes.en.html">Информация о выпуске 5.0</a></li>
 	<li><a href="http://doc.slitaz.org/ru:start">Документация в сети</a></li>
 </ul>
 
 
-<h2 id="start">Как начать</h2>
+<h2 id="start">Приступая к работе</h2>
 
 
 <h3 id="tazpanel">Панель SliTaz</h3>
 
-<p>Начиная с весны 2011 года система настраивается новым способом — при помощи утилиты TazPanel. Это CGI/веб пользовательский интерфейс, посредством которого вы можете управлять всей системой. Он включает в себя программы: управления пакетами, добавления и удаления пользователей, создания «живой» системы и многие другие. Каждая страница содержит небольшое описание, призванное помочь вам в управлении системой SliTaz. Чтобы получить доступ к панели, можно использовать пункт меню «Системные утилиты» или этот адрес:</p>
+<p>
+Начиная с весны 2011 года система настраивается новым способом — при помощи утилиты TazPanel.
+Это CGI/веб пользовательский интерфейс, посредством которого вы можете управлять всей системой.
+Он включает в себя программы: управления пакетами, добавления и удаления пользователей, создания
+«живой» системы и многие другие.
+Каждая страница содержит небольшое описание, призванное помочь вам в управлении системой SliTaz.
+Чтобы получить доступ к панели, можно использовать пункт меню «Системные» или этот адрес:
+</p>
 
 <p><a href="http://tazpanel:82">http://tazpanel:82</a></p>
+
+<p>
+В то время как некоторые действия в панели доступны для пользователя, другие требуют прав
+администратора.
+В правой части меню TazPanel находится значок, подсказывающий текущий режим работы:
+</p>
+
+<ul>
+	<li><span style="color:#859900"></span> режим пользователя;</li>
+	<li><span style="color:#cb4b16"></span> режим администратора.</li>
+</ul>
+
+<p>
+Наведите курсор мыши на значок, чтобы получить подробную информацию; нажмите на значок, чтобы войти
+в TazPanel как другой пользователь или администратор root.
+</p>
 
 
 <h3 id="network">Сетевые соединения</h3>
 
-<p>Нажмите кнопку «Сетевой монитор» в правой нижней части экрана, затем «Настройка» — запустится менеджер сети (netbox). Затем вы можете перейти во вкладку «DHCP», нажать «Start», и SliTaz отправит запрос DHCP на локальный роутер. Вы также можете настроить статический IP, PPPoE, PPP, VPN и другие параметры сети, используя для этого соответствующие вкладки. Для настройки беспроводного соединения вы можете использовать wifibox, нажав кнопку «Беспроводный менеджер» в менеджере сети, либо с помощью пункта меню «Системные утилиты» → «Беспроводные сетевые соединения».</p>
+<p>
+Откройте TazPanel и перейдите на страницу «Сети» →
+<a href="http://tazpanel:82/network.cgi">Сводка</a>.
+Здесь вы найдете краткий обзор сетевых интерфейсов и их текущее состояние.
+</p>
 
-<p>Более подробную документацию вы можете найти в Handbook: <a href="http://doc.slitaz.org/ru:handbook:networkconf">Настройка сети</a></p>
+<p>
+Чтобы настроить проводное соединение Ethernet, перейдите в меню TazPanel «Сети» →
+«<a href="http://tazpanel:82/network.cgi?eth">Ethernet</a>».
+Здесь вы можете настроить сетевую карту (с правами администратора) на использование DHCP или
+статического IP-адреса.
+</p>
+
+<p>
+Чтобы настроить беспроводное соединение, перейдите в меню TazPanel «Сети» →
+«<a href="http://tazpanel:82/network.cgi?wifi">Беспроводные</a>.
+Здесь вы можете подключиться к беспроводной сети (с правами администратора).
+Если кликнуть на имя желаемой сети, будут заполнены поля, расположенные ниже списка сетей.
+Можно ввести пароль, изменить настройки, либо подключиться к скрытой сети, отсутствующей в списке.
+</p>
+
+<p>
+Более подробную документацию вы можете найти в Handbook:
+<a href="http://doc.slitaz.org/ru:handbook:networkconf">Настройка сети</a>.
+</p>
 
 
 <h3 id="apps">Приложения</h3>
 
-<p>Чтобы увидеть список всех графических приложений, нажмите кнопку системного меню (кнопка «Приложения» на панели). Чтобы просмотреть список утилит командной строки, откройте терминал и дважды нажмите кнопку табуляции. Чтобы получить список всех установленных пакетов, запустите менеджер пакетов, нажав на значок в LXPanel или на соответствующий пункт в меню «Системные». Для установки новых пакетов вы должны быть подключены к сети, либо иметь DVD (USB-флеш) с загруженными пакетами. Конечно же, любую операцию по управлению пакетами также можно сделать командой <code>tazpkg</code> в командной строке.</p>
+<p>
+Чтобы увидеть список всех графических приложений, нажмите кнопку системного меню (кнопка
+«Приложения» на панели).
+Чтобы просмотреть список утилит командной строки, откройте терминал и дважды нажмите кнопку
+табуляции.
+</p>
+
+<p>
+В TazPanel имеется графический интерфейс управления пакетами:
+<a href="http://tazpanel:82/pkgs.cgi">Пакеты</a>.
+Чтобы получить список всех установленных пакетов, откройте TazPanel и перейдите в меню «Пакеты» →
+«<a href="http://tazpanel:82/pkgs.cgi?list">Мои пакеты</a>».
+</p>
+
+<p>
+Для установки новых пакетов вы должны быть подключены к сети, либо иметь DVD (USB-флеш)
+с загруженными пакетами.
+Конечно же, любую операцию по управлению пакетами также можно сделать командой <code>tazpkg</code>
+в командной строке.
+</p>
+
+<p>
+Можно искать в базе данных пакетов онлайн, используя
+<a href="http://pkgs.slitaz.org/">pkgs.slitaz.org</a> в графическом браузере на любом из ваших
+устройств.
+Вы сможете увидеть скриншоты приложений, и даже установить или удалить пакет, если сайт открыт
+в SliTaz.
+</p>
+
 
 
 <h3 id="office">Офисный пакет</h3>
 
-<p>База данных пакетов SliTaz содержит несколько легких офисных приложений. Эти пакеты можно просто установить в несколько кликов при помощи менеджера пакетов. В SliTaz также есть несложный способ установить мощный пакет OpenOffice: поищите «OpenOffice» в менеджере пакетов, дважды щелкните на «get-OpenOffice3» и установите скрипт с включенной опцией <code>Автостарт</code>.</p>
+<p>
+База данных пакетов SliTaz содержит несколько легких офисных приложений.
+Эти пакеты можно просто установить в несколько кликов при помощи менеджера пакетов в TazPanel.
+В SliTaz также есть несложный способ установить мощный пакет LibreOffice: поищите «LibreOffice»
+в менеджере пакетов, щелкните на «get-LibreOffice» и нажмите на кнопку «Установить» (для установки
+и удаления пакетов требуются права администратора root).
+</p>
 
-<p>Вы можете использовать облегченный офисный пакет: Abiword для работы с текстами, Gnumeric для электронных таблиц и HomeBank для ведения домашней бухгалтерии.</p>
+<p>
+Вы можете использовать облегченный офисный пакет:
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=abiword">Abiword</a> для работы с текстами,
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=gnumeric">Gnumeric</a> для электронных таблиц и
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=homebank">HomeBank</a> для ведения домашней
+бухгалтерии.
+</p>
 
 
 <h3 id="multimedia">Мультимедиа</h3>
 
-<p>Большинство модификаций SliTaz включает в себя широкий спектр драйверов звуковой карты, регулятор громкости и легкий аудио-проигрыватель для того, чтобы вы могли прослушать любой файл MP3 или OGG. Звуковая карта определяется автоматически во время загрузки и аудио-поддержка работает «из коробки» на многих системах. Если вы вручную добавили нового пользователя и не можете прослушать аудио, убедитесь, что пользователь принадлежит к группе <code>audio</code>. По любым другим проблемам обратитесь к полной документации или воспользуйтесь форумом.</p>
+<p>
+Большинство модификаций SliTaz включает в себя широкий спектр драйверов звуковой карты, регулятор
+громкости и легкий аудио-проигрыватель для того, чтобы вы могли прослушать любой файл MP3 или OGG.
+Звуковая карта определяется автоматически во время загрузки и аудио-поддержка работает «из коробки»
+на многих системах.
+Если вы вручную добавили нового пользователя и не можете прослушать аудио, убедитесь, что
+пользователь входит в группу <code>audio</code>.
+По любым другим проблемам обратитесь к полной документации или воспользуйтесь
+<a href="http://forum.slitaz.org/">форумом</a>.
+</p>
 
-<p>Чтобы просмотреть видео, придется установить один из пакетов, или воспользоваться специальной системой LiveCD или LiveUSB. Команда SliTaz подготовила для вас лучшие видео-плееры, доступные в GNU/Linux: MPlayer, Xine-UI и VLC.</p>
+<p>
+Видео в популярных веб-форматах (таких как WEBM и MPEG4) можно просматривать просто «из коробки».
+Чтобы просмотреть видео в других форматах, придется установить один из пакетов, или воспользоваться
+специальной системой LiveCD или LiveUSB.
+Команда SliTaz подготовила для вас лучшие видео-плееры, доступные в GNU/Linux:
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=mplayer">MPlayer</a>,
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=xine-ui">Xine-UI</a> и
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=vlc">VLC</a>.
+</p>
 
 
+<!--
 <h3 id="info">Системная информация</h3>
 
-<p>Вы можете получить информацию о вашей системе, нажав «Информация о системе» в меню «Системные», а затем перейдя на вкладку «Summary». Переходя по другим вкладкам, вы можете получить более подробную информацию, а тесты дадут вам представление о том, как быстр ваш компьютер. Для просмотра списка и управления всеми текущими процессами, вы можете использовать «Диспетчер задач».</p>
+<p>
+Вы можете получить информацию о вашей системе, нажав «Информация о системе» в меню «Системные»,
+а затем перейдя на вкладку «Summary».
+Переходя по другим вкладкам, вы можете получить более подробную информацию, а тесты дадут вам
+представление о том, как быстр ваш компьютер.
+Для просмотра списка и управления всеми текущими процессами, вы можете использовать «Диспетчер
+задач».
+</p>
+-->
 
 
 <h3 id="root">Как стать Root</h3>
 
-<p>По умолчанию, SliTaz не запускается от имени администратора root. Пароль администратора (по умолчанию, также <code>root</code>) запрашивается для любой задачи, требующей полномочий суперпользователя. Таким образом, работа становится более безопасной (только не забудьте сменить пароль). Для того чтобы стать root в Xterm, просто наберите <code>su</code> и введите пароль администратора.</p>
+<p>
+По умолчанию, SliTaz не запускается от имени администратора root.
+Пароль администратора (по умолчанию, также <code>root</code>) запрашивается для любой задачи,
+требующей полномочий суперпользователя.
+Таким образом, работа становится более безопасной (только не забудьте сменить пароль).
+</p>
+
+<p>
+Для того чтобы стать root в Xterm, просто наберите <code>su</code> и введите пароль администратора.
+Чтобы запустить графическое приложение с правами администратора, используйте <code>subox</code>.
+Например, чтобы запустить Leafpad с правами root, вы можете выполнить команду
+<code>subox leafpad</code>.
+</p>
 
 
 <h3 id="install">Установка</h3>
 
-<p>SliTaz может быть установлен на жесткий диск или на USB-накопитель при помощи TazPanel, выбрав в меню «Install → Install SliTaz». Установщик производит «полную» установку. SliTaz больше не будет работать в оперативной памяти (RAM), как в «живом» или в «скромном» режиме, а вся информация будет сразу же сохраняться на жесткий диск.</p>
+<p>
+SliTaz может быть установлен на жесткий диск или на USB-накопитель при помощи TazPanel, выбрав
+в меню «Установка» → «<a href="http://tazpanel:82/installer.cgi">Установка SliTaz</a>».
+Установщик производит «полную» установку.
+SliTaz больше не будет работать в оперативной памяти (RAM), как в «живом» или в «скромном» режиме,
+а вся информация будет сразу же сохраняться на жесткий диск.
+</p>
 
-<p>Для создания системы LiveUSB вы можете воспользоваться утилитой «Создать LiveUSB» из меню «Системные» или командой <code>tazusb</code> из командной строки. Более подробную информацию можно найти в Руководстве SliTaz: <a href="http://doc.slitaz.org/ru:handbook:liveusb">Носители LiveUSB</a></p>
+<p>
+Для создания системы LiveUSB вы можете воспользоваться утилитой «Создать LiveUSB» из меню
+«Системные» или командой <code>tazusb</code> из командной строки.
+Более подробную информацию можно найти в Руководстве SliTaz:
+<a href="http://doc.slitaz.org/ru:handbook:liveusb">Носители LiveUSB</a>.
+</p>
 
 <!-- End of content -->
 </div>
