--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<html lang="en">
 <head>
-	<meta charset="utf-8" />
+	<meta charset="UTF-8">
 	<title>SliTaz 5.0 Releases Notes</title>
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="../slitaz-doc.css" />
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" href="../slitaz-doc.css">
 </head>
 <body>
 
@@ -30,7 +30,7 @@
 
 
 <ul>
-	<li><a href="http://doc.slitaz.org/en:releases:5.0:errata">Errata for 4.0</a>
+	<li><a href="http://doc.slitaz.org/en:releases:5.0:errata">Errata for 5.0</a>
 	on the Wiki</li>
 </ul>
 
