--- a/slitaz/relnotes.ru.html
+++ b/slitaz/relnotes.ru.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="ru">
+<html lang="ru">
 <head>
-	<meta charset="utf-8" />
-	<title>Примечания к релизу SliTaz 4.0</title>
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="../slitaz-doc.css" />
+	<meta charset="UTF-8">
+	<title>Примечания к релизу SliTaz 5.0</title>
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" href="../slitaz-doc.css">
 </head>
 <body>
 
 <!-- Header -->
 <div id="header">
-	<h1>Примечания к релизу SliTaz 4.0</h1>
+	<h1>Примечания к релизу SliTaz 5.0</h1>
 </div>
 
 <!-- Languages -->
@@ -28,189 +28,11 @@
 
 <h2>Примечания к выпуску</h2>
 
-<p>Добро пожаловать в SliTaz 4.0! Выпущена современная, безопасная, стабильная,
-быстрая и гибкая, новая стабильная версия SliTaz для настольных компьютеров
-и серверов корпоративной среды.</p>
+
 
 <ul>
-	<li>Более чем 6500 коммитов в wok</li>
-	<li>В базу данных добавлены более 1000 пакетов</li>
-	<li>Загрузка за 10 секунд (и быстрее) на современных машинах</li>
-	<li>Централизованная настройка с помощью новой панели управления</li>
-	<li>Новая утилита для быстрого создания пакетов SliTaz</li>
-	<li>ISO-образ нового роллинг-релиза обновляется после создания каждого пакета</li>
-	<li>4 дистрибутива на одном LiveCD (по принципу матрёшки)</li>
-	<li>Новая графическая программа установки и обновления</li>
-	<li>Новый графический интерфейс и утилиты для создания «живых» систем</li>
-	<li>Улучшенная веб-загрузка: <a href="http://boot.slitaz.org/" target="_blank">boot.slitaz.org</a></li>
-	<li><a href="http://doc.slitaz.org/ru:releases:4.0:errata" target="_blank">Исправления
-		для 4.0</a> на вики</li>
-</ul>
-
-
-<h3>Тулчейн и утилиты сборки</h3>
-
-<p>SliTaz 4.0 был собран с помощью нашей новой сборочной утилиты CookUtils.
-Мы разработали новые утилиты, которые обрабатывают зависимости
-около 3300 пакетов простым и понятным образом. CookUtils позволяет создавать
-новые пакеты SliTaz быстрее, чем когда-либо. Данные утилиты и сопровождающая
-документация установлены на каждой системе SliTaz.</p>
-
-
-<h3>Поддерживаемое оборудование</h3>
-
-<p>SliTaz GNU/Linux 4.0 поддерживает большинство машин на базе i486 или
-x86 Intel-совместимых процессоров. Минимальный рекомендуемый размер оперативной
-памяти для работы основного («core») LiveCD — 192 МБ, наша новая система
-«матрёшек» автоматически определяет размер памяти и, при необходимости,
-загрузит модификацию, требующую меньше ресурсов памяти. Теперь LiveCD содержит:
-основную систему, являющуюся полнофункциональным рабочим столом; рабочий стол
-только с GTK; модификацию только с оконной системой X; систему в текстовом
-режиме, которой для работы нужно только 48 МБ оперативной памяти (но, которая
-всё же позволяет установить полный вариант).</p>
-
-
-<h3>«Живые» системы</h3>
-
-<p>Фактически основной LiveCD SliTaz 4.0 содержит 4 версии, а использоваться
-будет та, которую способно поддерживать ваше оборудование. LiveCD содержит
-несколько вложенных друг в друга редакций SliTaz. Загрузчик выбирает наиболее
-функциональную версию, способную работать в памяти вашего компьютера. Также
-вы можете выбрать пункт меню и нажать кнопку <kbd>[Tab]</kbd> для правки любых
-параметров. Из меню доступны командная строка, возможность веб-загрузки,
-справка по параметрам и выбор языка. Теперь люди с небольшим размером
-оперативной памяти смогут загрузить LiveCD, но, скорее всего, в текстовом
-режиме. Полная установка на жесткий диск теперь может быть произведена прямо
-с LiveCD, используя текстовый режим и только 48 МБ памяти.</p>
-
-
-<h3>Установка</h3>
-
-<p>Установка полностью автоматизирована и может быть произведена в графическом
-или текстовом режиме. TazInst — это легковесный установщик SliTaz на HDD.
-Он устанавливает SliTaz на жесткий диск с LiveCD, LiveUSB флешки, ISO-образа
-SliTaz, или из интернета (используя TazPanel), загружая стабильную, Cooking или
-роллинг-версию. Необходимые материалы и другую полезную информацию вы можете
-найти в руководстве и в Handbook.</p>
-
-<p>Если вам необходимо разметить диск перед установкой, вы можете быстро
-сделать это с помощью GParted в режиме LiveCD или используя редакцию,
-содержащую программы разметки. В конце установки можно настроить загрузчик GRUB,
-способный загрузить практически любую операционную систему. Это позволяет
-SliTaz сосуществовать с ранее установленной операционной системой, такой как
-Windows.</p>
-
-
-<h3>Пакеты</h3>
-
-<p>Среди 3350 пакетов, доступных в SliTaz 4.0 вы найдете всё, что вам нужно
-для того, чтобы превратить ваш компьютер в красивое рабочее место (e17), студию
-графического дизайна (GIMP и Inkscape), или студию видеомонтажа (Kino).
-Вы можете использовать все возможности интернета: мгновенные сообщения, VoIP,
-электронную почту и, конечно же, веб-сёрфинг. Искать нужные пакеты можно
-с помощью функции поиска в TazPkg, TazPanel или на сайте
-<a href="http://pkgs.slitaz.org/" target="_blank">pkgs.slitaz.org</a></p>
-
-<p>SliTaz может работать как мощный веб-сервер, используя стабильный пакет
-LightTPD/PHP (по умолчанию не установлен), поддерживая CGI, Perl и Python.
-Также доступны Apache, Squid и безопасный просмотр интернета с использованием
-сети Tor.</p>
-
-<p>Конечно же, SliTaz может предоставлять полную среду разработки с компилятором
-GCC, Geany IDE, репозиторием Mercurial и всеми dev-библиотеками.</p>
-
-<p>Пакеты теперь собираются автоматически при помощи SliTaz Build Bot
-(<a href="http://cook.slitaz.org/" target="_blank">cook.slitaz.org</a>)
-и проверяются Cookutils, что гарантирует соблюдение стандартов FHS («Стандарт
-иерархии файловой системы»).</p>
-
-
-<h3>Управление</h3>
-
-<p>TazPanel — это новая утилита для настройки системы в SliTaz 4.0.
-Она представляет собой CGI/веб-интерфейс с настраиваемым пользовательским
-интерфейсом. С ее помощью вы можете контролировать всю систему: управлять
-пакетами, добавлять и удалять пользователей, создавать «живые» системы
-и многое другое. Каждая страница содержит небольшое описание, чтобы помочь вам
-управлять вашей системой SliTaz. Можно получить доступ к панели, используя
-пункт меню в «Системных утилитах» или этот адрес:
-<a href="http://tazpanel:82" target="_blank">http://tazpanel:82</a></p>
-
-
-<h3>Основное рабочее место</h3>
-
-<p>Много внимания было уделено основному рабочему месту. Все приложения хорошо
-интегрированы, была создана специальная тема оформления SliTaz (включающая
-в себя значки, темы Openbox и GTK).</p>
-
-<p>По умолчанию в LiveCD SliTaz используется Openbox — очень легкий
-и стабильный оконный менеджер. Openbox поддерживает широкий спектр настроек
-с помощью утилиты ObConf. Встроенная панель LXPanel дает возможность отображать
-динамическое меню, основанное на стандартах Freedesktop. Важным элементом также
-является небольшое меню, доступное по клику на экран; оно содержит закладки,
-оконные эффекты, утилиты LiveCD и LiveUSB, настройки Openbox и системные задачи.
-Приложения доступны из меню, которое предоставляет LXPanel. Управление рабочим
-столом и значками возложено на файловый менеджер PCManFM.</p>
-
-<p>Вы можете использовать одну из специальных редакций LiveCD, или установить
-на вашу систему окружение рабочего стола Enlightenment (e17), оконные менеджеры
-XFCE, Pekwm, JWM и DWM. Нужную сессию можно выбрать, нажав клавишу
-<kbd>F1</kbd> в менеджере входа Slim. Чтобы настроить сессию по умолчанию,
-можно использовать tazx, либо вручную отредактировать файл
-<tt>~/.Xinitrc</tt>.</p>
-
-
-<h3>Сеть SliTaz</h3>
-
-<p>Со времен 3.0 все сервисы были изменены и улучшены, была создана сеть
-сообщества SliTaz для того, чтобы пользователи, авторы и разработчики могли
-собраться вместе и поделиться своими идеями о проекте. Сеть включает в себя
-платформу сообщества, документацию на основе вики, форум и баг-трекер. Теперь
-разработчики, художники, авторы документации, тестировщики и любой человек,
-обладающий дельным предложением, может помочь другим, влиться в проект
-и работать вместе над его улучшением. Для удобства навигации сеть сообщества
-SliTaz (SCN), сайт и репозитории имеют один и тот же графический макет.</p>
-
-
-<h3>От 3.0 к 4.0</h3>
-
-<p>Установщик SliTaz GNU/Linux содержит функцию, позволяющую вам обновиться
-с версии 3.0 до 4.0. Для того, чтобы обновить систему, сначала загрузитесь
-со стабильного LiveCD, запустите программу установки из командной строки или
-из TazPanel, выберите пункт обновления, а затем укажите раздел или
-файл параметров, содержащий систему, которую вы хотите обновить.
-Программа установки очистит систему и переустановит с зеркала все пакеты,
-не присутствующие на CD. Когда процедура завершится, вы сможете загрузиться
-с новой версией SliTaz.</p>
-
-<p>Для обновления с 3.0 до 4.0 также можно использовать функцию
-<tt>set-release</tt> в менеджере пакетов TazPkg, но будьте осторожны, т.к.
-это еще не проверено, и может потребоваться некоторое вмешательство.</p>
-
-
-<h3>Люди проекта</h3>
-
-<p>SliTaz гордится тем, что является международным проектом.
-Люди проекта — те, кто разрабатывают дистрибутив, вносят исправления на сайт,
-развивают репозитории Hg и пишут официальную документацию. Они пришли к нам
-из Швейцарии, Франции​​, Бразилии, Квебека, Китая, Индии, России, Украины, Англии
-и США.</p>
-
-<ul>
-	<li>Christophe Lincoln</li>
-	<li>Pascal Bellard</li>
-	<li>Eric Joseph-Alexandre</li>
-	<li>Paul Issott</li>
-	<li>Claudinei Pereira</li>
-	<li>Dominique Corbex</li>
-	<li>Brenton Edgar Scott</li>
-	<li>Christopher Rogers</li>
-	<li>Алексей Бобылёв</li>
-	<li>Samuel Trassare</li>
-	<li>Christian Mesh</li>
-	<li>Александр Медведев</li>
-	<li>Richard Dunbar</li>
-	<li>…</li>
+	<li><a href="http://doc.slitaz.org/en:releases:5.0:errata">Errata for 5.0</a>
+	on the Wiki</li>
 </ul>
 
 <!-- End of content -->
