index.ru.html: some quotes missing.

--- a/slitaz/index.ru.html
+++ b/slitaz/index.ru.html
@@ -91,7 +91,7 @@
 
 <p>
 Откройте TazPanel и перейдите на страницу «Сети» →
-<a href="http://tazpanel:82/network.cgi">Сводка</a>.
+«<a href="http://tazpanel:82/network.cgi">Сводка</a>».
 Здесь вы найдете краткий обзор сетевых интерфейсов и их текущее состояние.
 </p>
 
@@ -104,7 +104,7 @@
 
 <p>
 Чтобы настроить беспроводное соединение, перейдите в меню TazPanel «Сети» →
-«<a href="http://tazpanel:82/network.cgi?wifi">Беспроводные</a>.
+«<a href="http://tazpanel:82/network.cgi?wifi">Беспроводные</a>».
 Здесь вы можете подключиться к беспроводной сети (с правами администратора).
 Если кликнуть на имя желаемой сети, будут заполнены поля, расположенные ниже списка сетей.
 Можно ввести пароль, изменить настройки, либо подключиться к скрытой сети, отсутствующей в списке.
