--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -72,7 +72,7 @@
 	<a href="http://tazpanel:82">http://tazpanel:82</a>
 </p>
 <p>
-	While some actions in the panel are available to the user, other require
+	While some actions in the panel are available to the user, others require
 	administrator rights. On the right side of the TazPanel menu you can find
 	an icon, prompting the current operating mode:
 </p>
@@ -81,8 +81,8 @@
 	<li><span style="color:#cb4b16"></span> for administration mode.</li>
 </ul>
 <p>
-	Please, point mouse cursor over icon to show more information; click icon
-	to log into TazPanel as different user or root administrator.
+	Please point the mouse cursor over the icon to show more information; then click the icon
+	to log into TazPanel as a different user or as root administrator.
 </p>
 
 
@@ -97,13 +97,13 @@
 <p>
 	To configure your Ethernet device, click the “Network” →
 	“<a href="http://tazpanel:82/network.cgi?eth">Ethernet</a>”.
-	From here you can configure (with administrator permissions) your device
+	From here you can configure (with administrator privileges) your device
 	to use DHCP or a static address.
 </p>
 <p>
 	To configure Wireless devices, click the “Network” →
 	“<a href="http://tazpanel:82/network.cgi?wifi">Wireless</a>”.
-	Here you can select a network to connect to (with administrator permissions).
+	Here you can select a network to connect to (with administrator privileges).
 	When you click on the desired network, the Connection box underneath will be
 	appropriately filled in.
 	Next, enter your passphrase or leave the field blank for none.
@@ -136,10 +136,10 @@ device containing any downloaded packages.  Naturally any package management
 can also be done from the command line using <code>tazpkg</code>.
 </p>
 <p>
-Another option to query packages database online is to use
-<a href="http://pkgs.slitaz.org/">pkgs.slitaz.org</a> in graphical web browser
+Another option to query the packages database online is to use
+<a href="http://pkgs.slitaz.org/">pkgs.slitaz.org</a> in a graphical web browser
 on any of your devices. You can see screenshots of applications and even install
-or remove a package, if the site is opened in SliTaz.
+or remove a package if the site is opened in SliTaz.
 </p>
 
 
@@ -151,14 +151,14 @@ All of these packages are easily installable in a few clicks through the package
 manager in Tazpanel. SliTaz also provides a simple way to install the powerful
 LibreOffice suite: just search for “LibreOffice” in the packages manager, click
 on “get-LibreOffice”, and click Install (to install and remove packages you
-need an administrator permissions).
+need administrator privileges).
 </p>
 <p>
 To have a lightweight office suite: just use
 <a href="http://127.0.0.1:82/user/pkgs.cgi?info=abiword">Abiword</a>
 as the Word processor,
 <a href="http://127.0.0.1:82/user/pkgs.cgi?info=gnumeric">Gnumeric</a>
-as a preadsheet and
+as a spreadsheet and
 <a href="http://127.0.0.1:82/user/pkgs.cgi?info=homebank">Homebank</a>
 for Bank Accounting.
 </p>
